First step to integration of SuperSOMns

--- a/rebench.conf
+++ b/rebench.conf
@@ -75,6 +75,14 @@ benchmark_suites:
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
+    steady-supersomns:
+        gauge_adapter: RebenchLog
+        command: " Harness.som %(benchmark)s %(variable)s "
+        location: benchmarks/SOMns
+        variable_values: *VERY_SLOW_VM ## the number iterations measured
+        max_runtime: 6000
+        benchmarks: *BENCHMARKS
+
     steady-java:
         gauge_adapter: RebenchLog
         command: " -cp ../benchmarks/Java/benchmarks.jar Harness %(benchmark)s %(variable)s "
@@ -203,7 +211,12 @@ virtual_machines:
     SOMns:
         path: implementations/
         binary: SOMns.sh
-        build: implementations/build-somns.sh
+        build: ./build-somns.sh
+    SuperSOMns:
+        path: implementations/
+        binary: SuperSOMns.sh
+        build: ./build-supersomns.sh
+
     SOMns-Enterprise:
         path: implementations/
         binary: SOMns-e.sh
@@ -269,6 +282,12 @@ experiments:
             - GraalBasic
             - GraalEnterprise
             - Java8U66
+    compare-super:
+        executions:
+            - SOMns:
+                benchmark: steady-supersomns
+            - SuperSOMns:
+                benchmark: steady-supersomns
     steady-som:
         executions:
             - SOMns:
