--- a/rebench.conf
+++ b/rebench.conf
@@ -71,7 +71,7 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
-        variable_values: *FAST_VM ## the number iterations measured
+        variable_values: *VERY_SLOW_VM ## the number iterations measured
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
