Fix SuperSOMns.sh + iterations

--- a/rebench.conf
+++ b/rebench.conf
@@ -19,6 +19,7 @@ are_we_fast_yet:
         fast_vm:      &FAST_VM      3000
         slow_vm:      &SLOW_VM      250
         very_slow_vm: &VERY_SLOW_VM 100
+        painfully_slow_vm: &PAINFULLY_SLOW_VM 10
 
 # definition of benchmark suites
 benchmark_suites:
@@ -26,38 +27,38 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " -cp .:Core:CD:DeltaBlue:Havlak:Json:NBody:Richards:../../implementations/TruffleSOM/Smalltalk Harness.som  %(benchmark)s %(variable)s "
         max_runtime: 5000
-        variable_values: *FAST_VM ## the number iterations measured
+        variable_values: *VERY_SLOW_VM ## the number iterations measured
         location: benchmarks/SOM
         benchmarks: &BENCHMARKS
-            - DeltaBlue:
-                extra_args: 12000
-            - Richards:
-                extra_args: 100
-            - Json:
-                extra_args: 100
-            - CD:
-                extra_args: 250
-            - Havlak:
-                extra_args: 1500
-            
-            - Bounce:
-                extra_args: 1500
-            - List:
-                extra_args: 1500
+#            - DeltaBlue:
+#                extra_args: 12000
+#            - Richards:
+#                extra_args: 100
+#            - Json:
+#                extra_args: 100
+#            - CD:
+#                extra_args: 250
+#            - Havlak:
+#                extra_args: 1500
+#            
+#            - Bounce:
+#                extra_args: 1500
+#            - List:
+#                extra_args: 1500
             - Mandelbrot:
                 extra_args: 500
-            - NBody:
-                extra_args: 250000
-            - Permute:
-                extra_args: 1000
-            - Queens:
-                extra_args: 1000
-            - Sieve:
-                extra_args: 3000
-            - Storage:
-                extra_args: 1000
-            - Towers:
-                extra_args: 600
+#            - NBody:
+#                extra_args: 250000
+#            - Permute:
+#                extra_args: 1000
+#            - Queens:
+#                extra_args: 1000
+#            - Sieve:
+#                extra_args: 3000
+#            - Storage:
+#                extra_args: 1000
+#            - Towers:
+#                extra_args: 600
 
     steady-som-interp:
         gauge_adapter: RebenchLog
@@ -71,7 +72,7 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
-        variable_values: *VERY_SLOW_VM ## the number iterations measured
+        variable_values: *PAINFULLY_SLOW_VM ## the number iterations measured
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
@@ -79,7 +80,7 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
-        variable_values: *VERY_SLOW_VM ## the number iterations measured
+        variable_values: *PAINFULLY_SLOW_VM ## the number iterations measured
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
