SOMns+SuperSOMns: Use VERY_SLOW_VM

--- a/rebench.conf
+++ b/rebench.conf
@@ -72,7 +72,7 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
-        variable_values: *PAINFULLY_SLOW_VM ## the number iterations measured
+        variable_values: *VERY_SLOW_VM ## the number iterations measured
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
@@ -80,7 +80,7 @@ benchmark_suites:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
-        variable_values: *PAINFULLY_SLOW_VM ## the number iterations measured
+        variable_values: *VERY_SLOW_VM ## the number iterations measured
         max_runtime: 6000
         benchmarks: *BENCHMARKS
 
