--- a/rebench.conf
+++ b/rebench.conf
@@ -30,35 +30,34 @@ benchmark_suites:
         variable_values: *VERY_SLOW_VM ## the number iterations measured
         location: benchmarks/SOM
         benchmarks: &BENCHMARKS
-#            - DeltaBlue:
-#                extra_args: 12000
-#            - Richards:
-#                extra_args: 100
-#            - Json:
-#                extra_args: 100
-#            - CD:
-#                extra_args: 250
-#            - Havlak:
-#                extra_args: 1500
-#            
-#            - Bounce:
-#                extra_args: 1500
-#            - List:
-#                extra_args: 1500
+            - DeltaBlue:
+                extra_args: 12000
+            - Richards:
+                extra_args: 100
+            - Json:
+                extra_args: 100
+            - CD:
+                extra_args: 250
+            - Havlak:
+                extra_args: 1500
+            - Bounce:
+                extra_args: 1500
+            - List:
+                extra_args: 1500
             - Mandelbrot:
                 extra_args: 500
-#            - NBody:
-#                extra_args: 250000
-#            - Permute:
-#                extra_args: 1000
-#            - Queens:
-#                extra_args: 1000
-#            - Sieve:
-#                extra_args: 3000
-#            - Storage:
-#                extra_args: 1000
-#            - Towers:
-#                extra_args: 600
+            - NBody:
+                extra_args: 250000
+            - Permute:
+                extra_args: 1000
+            - Queens:
+                extra_args: 1000
+            - Sieve:
+                extra_args: 3000
+            - Storage:
+                extra_args: 1000
+            - Towers:
+                extra_args: 600
 
     steady-som-interp:
         gauge_adapter: RebenchLog
