--- a/rebench.conf
+++ b/rebench.conf
@@ -31,33 +31,33 @@ benchmark_suites:
         location: benchmarks/SOM
         benchmarks: &BENCHMARKS
             - DeltaBlue:
-                extra_args: 200
+                extra_args: 800
             - Richards:
                 extra_args: 1
             - Json:
-                extra_args: 2
+                extra_args: 5
             - CD:
                 extra_args: 10
-            - Havlak:
-                extra_args: 1
+#            - Havlak:
+#                extra_args: 1
             - Bounce:
                 extra_args: 50
             - List:
-                extra_args: 25
-            - Mandelbrot:
                 extra_args: 50
+            - Mandelbrot:
+                extra_args: 100
             - NBody:
                 extra_args: 10000
             - Permute:
-                extra_args: 20
+                extra_args: 40
             - Queens:
-                extra_args: 25
+                extra_args: 50
             - Sieve:
-                extra_args: 100
+                extra_args: 150
             - Storage:
-                extra_args: 25
+                extra_args: 50
             - Towers:
-                extra_args: 10
+                extra_args: 20
 
     steady-som-interp:
         gauge_adapter: RebenchLog
@@ -68,14 +68,6 @@ benchmark_suites:
         benchmarks: *BENCHMARKS
 
     steady-somns:
-        gauge_adapter: RebenchLog
-        command: " Harness.som %(benchmark)s %(variable)s "
-        location: benchmarks/SOMns
-        variable_values: *VERY_SLOW_VM ## the number iterations measured
-        max_runtime: 6000
-        benchmarks: *BENCHMARKS
-
-    steady-supersomns:
         gauge_adapter: RebenchLog
         command: " Harness.som %(benchmark)s %(variable)s "
         location: benchmarks/SOMns
@@ -289,11 +281,10 @@ experiments:
             - GraalEnterprise
             - Java8U66
     compare-super:
+        benchmark: steady-somns
         executions:
-            - SOMns:
-                benchmark: steady-supersomns
-            - SuperSOMns:
-                benchmark: steady-supersomns
+            - SOMns
+            - SuperSOMns
     steady-som:
         executions:
             - SOMns:
